fix: alignment of the documentation page

--- a/antora-ui-camel/src/css/docs.css
+++ b/antora-ui-camel/src/css/docs.css
@@ -58,7 +58,7 @@
 .project .links {
   align-items: center;
   margin: 1.5rem 0;
-  white-space: nowrap;
+  word-break: break-word;
 }
 
 @media screen and (max-width: 1023px) {
@@ -69,8 +69,20 @@
 }
 
 @media screen and (max-width: 480px) {
+  .camel-project {
+    padding: 0 0 1.5rem 0;
+  }
+
+  .camel-project .camel-documentation .links {
+    padding: 1rem;
+  }
+
+  .docs {
+    padding: 0 0 1.5rem 0;
+  }
+
   .docs .project {
-    padding: 1rem 0.4rem;
+    padding: 0;
   }
 }
 
